<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>TestProjects</artifactId>
        <groupId>py.com.oym</groupId>
        <version>2.0.0-SNAPSHOT</version>
    </parent>
        
    <groupId>py.com.oym</groupId>
    <artifactId>TestProjects-jar</artifactId>
    <packaging>jar</packaging>
    <name>TestProjects-jar</name>    
    
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    
    <dependencies>    
        <dependency>
            <groupId>org.wildfly</groupId>
            <artifactId>wildfly-ejb-client-bom</artifactId>
            <version>10.1.0.Final</version>            
            <type>pom</type>
        </dependency>
    </dependencies>
</project>